# turbo-k8s-starter

./: .gitignore  LICENSE  README.md  package.json  skaffold.yaml  turbo.json
.github/workflows/: docker-build.yml
apps/go-api/: .dockerignore  Dockerfile  go.mod  main.go  package.json
apps/go-api/helm/go-api/: Chart.yaml  README.md  values.yaml
apps/go-api/performance-tests/: loadtest.js
apps/go-api/tests/: go_api_test.go
apps/hono-api/: .dockerignore  Dockerfile  package.json  tsconfig.json
apps/hono-api/helm/hono-api/: Chart.yaml  README.md  values.yaml
apps/hono-api/performance-tests/: loadtest.js
apps/hono-api/src/: index.ts
apps/hono-api/tests/: index.test.ts
apps/python-api/: .dockerignore  Dockerfile  main.py  package.json  pyproject.toml
apps/python-api/helm/python-api/: Chart.yaml  README.md  values.yaml
apps/python-api/helm/python-api/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
apps/python-api/performance-tests/: loadtest.js
helm/turbo-k8s-starter/: Chart.yaml  values.yaml
helm/turbo-k8s-starter/templates/: _helpers.tpl  go-api-deployment.yaml  go-api-hpa.yaml  go-api-service.yaml  hono-api-deployment.yaml  hono-api-hpa.yaml  hono-api-service.yaml  ingress.yaml  python-api-deployment.yaml  python-api-hpa.yaml  python-api-service.yaml  serviceaccount.yaml
helm/turbo-k8s-starter/templates/tests/: test-connection.yaml
scripts/: preinstall.sh  reset-python-venvs.sh
turbo/generators/: config.ts
turbo/generators/templates/bun-package/: package.json.hbs
(+46 files in other folders)
