[tool.poetry]
name = "python-api"
version = "0.1.0"
description = "Python FastAPI Example"
authors = ["Jack Quinn <jack@jq.codes>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
python-health = { path = "../../packages/python-health" }

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"
locust = "^2.31.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"